--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,9 +1,9 @@
-<%= if notice %>
-<p id="notice"><%= notice %> </p>
+<% if notice %>
+  <p id="notice"><%= notice %> </p>
 <% end %>
 
 <h1>Your pragmatic catalog</h1>
-<%= @products.each do |product| %>
+<% @products.each do |product| %>
   <div class="entry">
     <%= image_tag(product.image_url) %>
     <h3><%= product.title %></h3>
