--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -34,6 +34,10 @@
       margin-bottom: 0.8em;
     }
 
+    form, div {
+      display: inline;
+    }
+
     .price {
       color: #44a;
       font-weight: bold;
