--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,3 @@
-<% if notice %>
-  <p id="notice"><%= notice %> </p>
-<% end %>
-
 <h1>Your pragmatic catalog</h1>
 <% @products.each do |product| %>
   <div class="entry">
@@ -9,7 +5,8 @@
     <h3><%= product.title %></h3>
     <%= sanitize(product.description) %>
     <div class="price_line">
-      <span class="price"><%= product.price %></span>
+      <span class="price"><%= number_to_currency(product.price) %></span>
+      <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
     </div>
   </div>
 <% end %>
