added total sum, session counter, cart destroy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
       <%= yield %>
     </div>
   </div>
-
+  <footer>
+    <div>
+      <p>Ваше количество посещений: <%= user_visit_counter %></p>
+    </div>
+  </footer>
 </body>
 </html>
