--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,12 @@
  *= require_self
  *= require_tree .
 */
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 #banner {
   background: #9c9;
   padding: 10px;
