--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,12 @@
   <div id="columns">
     <div id="side">
       <div id="cart">
-        <%= render @cart %>
+        <%= render 'carts/cart', cart: current_cart %>
       </div>
       <ul>
-        <li><%= link_to 'home', store_path %></li>
+        <li><%= link_to 'home', store_index_path %></li>
         <li><%= link_to 'products', products_path %></li>
         <li><%= link_to 'current_cart', cart_path(current_cart) %></li>
-        <li><a href="http://www..../contact">Contact</a></li>
       </ul>
       <p><font color=#FFF><%= Time.now.strftime("%d-%m-%Y") %></font></p>
     </div>
